--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -106,7 +106,7 @@
                     name="password"
                   />
 
-                  <div class="tooltip-wrapper">
+                  <div class="tooltip-wrapper" id="tooltipWrapper">
                     <div class="tooltip-title">
                       <span>Password must contain:</span>
                     </div>
@@ -168,7 +168,7 @@
                 <button type="submit" class="primary-button">Sign up</button>
               </div>
             </form>
-
+            <!-- <p> User already Exists Please Login </p> -->
             <div class="have-account">
               Already have an account?
               <a href="/login">Login here</a>
