--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -106,6 +106,7 @@ body {
 .default-page-wrapper {
   background-color: #fff;
   height: 100vh;
+  width: 100vw;
 }
 .default-page-wrapper .default-page-content-wrapper {
   position: relative;
