--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -350,7 +350,7 @@ input.error-state:focus {
   background-color: $background-1;
   border: 1px solid #ccc;
   border-radius: 0.3125rem;
-  display: none;
+  // display: none;
   z-index: 10;
   box-sizing: border-box;
   margin-top: 0.8rem;
